--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                <form>
                     <div class="footer-wrap">
                         <label class="footer-label">
-                            <input type="text" class="footer-input" name="text" placeholder="E-mail">
+                            <input type="text" class="footer-input" name="text" placeholder="E-mail" required>
                         </label>
                            <button class="footer-btn" type="submit">Subscribe
                                 <svg class="footer-frame" width="24" height="24">
@@ -372,8 +372,8 @@
                     <label class="modal-label">
                         <span class="modal-name">Name</span>
                         <span class="input-wrap">
-                           <input type="text" class="modal-input" name="text">
-                           <svg class="input-icon" width="18" height="18">
+                           <input type="text" class="modal-input" name="text" required>
+                           <svg class="input-icon" width="18" height="24">
                                <use href="./images/symbol-defs.svg#icon-person-black"></use>
                            </svg>
                        </span>
@@ -381,7 +381,7 @@
                     <label class="modal-label">
                         <span class="modal-tel">Phone</span>
                         <span class="input-wrap">
-                           <input type="phone" class="modal-input" name="tel">
+                           <input type="phone" class="modal-input" name="tel" required>
                            <svg class="input-icon" width="18" height="24">
                                <use href="./images/symbol-defs.svg#icon-phone-black"></use>
                            </svg>
@@ -390,7 +390,7 @@
                     <label class="modal-label">
                         <span class="modal-email">Email</span>
                         <span class="input-wrap">
-                            <input type="email" class="modal-input" name="email">
+                            <input type="email" class="modal-input" name="email" required>
                             <svg class="input-icon" width="18" height="24">
                                 <use href="./images/symbol-defs.svg#icon-email-black"></use>
                             </svg>
@@ -402,7 +402,7 @@
                     </div>
 
                     <div class="modal-field">
-                        <input type="checkbox" name="privacy" id="privacy" class="input-check visually-hidden" value="tru">
+                        <input type="checkbox" name="privacy" id="privacy" class="input-check visually-hidden" value="tru" required>
                         <label for="privacy" class="check-text">
                             <span>
                                <svg class="check-icon" width="10" height="8">
