--- a/portfolio.html
+++ b/portfolio.html
@@ -221,6 +221,21 @@
                 </li>
             </ul>
         </div>
+        <div class="subscribe">
+            <p class="footer-title">Subscribe</p>
+            <form>
+                <div class="footer-wrap">
+                    <label class="footer-label">
+                        <input type="text" class="footer-input" name="text" placeholder="E-mail">
+                    </label>
+                    <button class="footer-btn" type="submit">Subscribe
+                        <svg class="footer-frame" width="24" height="24">
+                            <use href="./images/symbol-defs.svg#icon-frame"></use>
+                        </svg>
+                    </button>
+                </div>
+            </form>
+        </div>
         </div>
     </footer>
 </body>
